# marzboard

./: .dockerignore  .gitignore  Dockerfile  README.md  admins.sample.json  docker-compose.dev.yml  docker-compose.yml  nodes.sample.json  tls.sh
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/models/: user.py
backend/app/utils/: cache.py  func.py  time.py
backend/app/views/: __init__.py  admin.py  censorship_status.py  subscriptions.py
frontend/: .dockerignore  chakra.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/auth/: authStorage.ts
frontend/src/components/: Footer.tsx  Input.tsx  UsageSlider.tsx  UserBadge.tsx  UserData.tsx  UsersTable.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Login.tsx
frontend/src/service/: http.ts
frontend/src/types/: User.ts
frontend/src/utils/: dateFormatter.ts
webserver/: app.conf  dev.conf  prod.conf
webserver/templates/: dev.template  prod.template
